kustomize/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: asia-northeast1-docker.pkg.dev/niboshi-test/k8s-test/k8s-cluster-demo:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
            ephemeral-storage: "10Mi"
        ports:
        - name: app-port
          containerPort: 3001
        readinessProbe:
          httpGet:
            path: /healthz
            port: app-port
        startupProbe:
          httpGet:
            path: /healthz
            port: app-port
          failureThreshold: 10
          periodSeconds: 5
