kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  defaultBackend:
    service:
      name: app-svc
      port:
        number: 3001
